@@ -1,1 +1,6 @@
 from _gcompris import *
+
+import gettext
+
+gettext.bindtextdomain(GETTEXT_PACKAGE, PACKAGE_LOCALE_DIR)
+gettext.textdomain(GETTEXT_PACKAGE)
